--- a/recipes/tilapia.html
+++ b/recipes/tilapia.html
@@ -12,6 +12,22 @@
     <body>
 
         <h1>Parmesan Crusted Tilapia Fillets</h1>
+        
+        <img src="../img/tilapia-pic.jpg" height="410" width="410" alt="Parmesan Crusted Tilapia fillet with a side of brown rice and broccoli.">
+
+        <h2>Description</h2>
+        <p>This recipe has been passed down my family for multiple generations. Up until now, these instructions were nothing more than a myth to the most famous culinary experts. During the 1970's, Rubert Frederico Angstun had avoided 3 kidnapping attempts, all in the effort to torture the family secret out of him. Now in this new millennium, it will be revealed to the public. Let it be known, two key ingredients are redacted. With this known, the most optimal way to experience this dish is <strong>still</strong> from the hands of an Angstun family member.</p>
+
+        <h3>Ingredients</h3>
+            <ul>
+                <li>3/4 cup grated Parmesan cheese</li>
+                <li>1 tablespoon chopped fresh parsley</li>
+                <li>2 teaspoons paprika</li>
+                <li>salt and ground black pepper to taste</li>
+                <li>4 tilapia fillets</li>
+                <li>1 drizzle olive oil</li>
+            </ul>
+
         <a href="../index.html">Home</a>
 
     </body>
