--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <body>
 
         <h1>Odin Recipes</h1>
-        <a href="./recipes/tilapia.html">Parmesan Crusted Tilapia Fillets</a>
+        <ul>
+            <li><a href="./recipes/tilapia.html">Parmesan Crusted Tilapia Fillets</a></li>
+            <li><a href="./recipes/tortellini.html">Tortellini Lasagna Skillet</a></li>
+
+        </ul>
+       
 
     </body>
 </html>
