--- a/recipes/tortellini.html
+++ b/recipes/tortellini.html
@@ -8,10 +8,14 @@
 
     </head>
 
-    
+
     <body>
 
         <h1>Tortellini Lasagna Skillet</h1>
+        <img src="../img/tortellini-pic.jpg" height="410" width="410" alt="Tortellini Lasagna Skillet">
+
+        <h2>Description</h2>
+        <p></p>
 
     </body>
 </html>
