--- a/recipes/tortellini.html
+++ b/recipes/tortellini.html
@@ -15,7 +15,34 @@
         <img src="../img/tortellini-pic.jpg" height="410" width="410" alt="Tortellini Lasagna Skillet">
 
         <h2>Description</h2>
-        <p></p>
+        <p>This is one of the final recipes created by Roberto Angustin's great grandfather, Jeziduth Angustin Agorithmo, before he was drafted into the war. Though not the most popular of the Angustin's dishes, it still an incredible delicacy. Though very easy on the taste buds, it is rumored that Agorithmo had stated in his later years that this skillet is one of his greatest regrets.</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 pound ground beef</li>
+            <li>2 italian sausage links</li>
+            <li>1 small onion, diced</li>
+            <li>6 ounces sliced mushrooms (optional)</li>
+            <li>1 pound cheese tortellini</li>
+            <li>1 (28 ounce) can crushed tomatoes</li>
+            <li>1 (14 1/2 ounce) can diced tomatoes</li>
+            <li>1 (8 ounce) can roasted garlic tomato sauce</li>
+            <li>3/4 teaspoon Italian seasoning</li>
+            <li>1/2 teaspoon granulated garlic</li>
+            <li>salt and freshly ground black pepper to taste</li>
+            <li>4 ounces shredded mozzarella cheese</li>
+            <li>chopped parsley, for garnish</li> 
+        </ul>
+
+        <h3>Directions</h3>
+        <ol>
+            <li>Preheat the oven to 350 degrees F (180 degrees C).</li>
+            <li>Cook ground beef and sausage in a deep dish skillet over medium heat, breaking up the meat with a spatula, until browned, about 5 minutes. Add onion; cook and stir for 5 minutes. Add mushrooms and cook for 5 minutes or more. Drain any excess grease.</li>
+            <li>Stir in tortellini, crushed tomatoes, diced tomatoes, tomato sauce, Italian seasoning, and garlic. Season with salt and pepper. Smooth out mixture in the skillet, and top with mozzarella cheese.</li>
+            <li>Bake in the preheated oven until cheese is melted and golden, about 35 minutes. Garnish with chopped parsley.</li>
+        </ol>
+
+        <a href="../index.html">Home</a>
 
     </body>
 </html>
