--- a/recipes/tilapia.html
+++ b/recipes/tilapia.html
@@ -28,6 +28,15 @@
                 <li>1 drizzle olive oil</li>
             </ul>
 
+
+        <h3>Directions</h3>
+        <ol>
+            <li>Preheat the oven to 400 degrees F (200 degrees C). Line a baking sheet with aluminum foil.</li>
+            <li>Whisk Parmesan cheese, parsley, paprika, salt, and pepper together in a shallow dish.</li>
+            <li>Coat tilapia fillets with olive oil and press into the Parmesan cheese mixture. Arrange coated fillets on the prepared baking sheet.</li>
+            <li>Bake in the preheated oven until the fish flakes easily with a fork, 10 to 12 minutes.</li>
+        </ol>
+
         <a href="../index.html">Home</a>
 
     </body>
