--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <ul>
             <li><a href="./recipes/tilapia.html">Parmesan Crusted Tilapia Fillets</a></li>
             <li><a href="./recipes/tortellini.html">Tortellini Lasagna Skillet</a></li>
+            <li><a href="./recipes/chorizo.html">Scrambled Eggs with Chorizo</a></li>
 
         </ul>
        
