--- a/recipes/chorizo.html
+++ b/recipes/chorizo.html
@@ -12,6 +12,24 @@
         <img src="../img/chorizo.jpg" height="410" width="410" alt="Chorizo with scrambled eggs cooking on a pan. Spatula is scooping the eggs.">
 
         <h2>Description</h2>
+        <p>Contrary to popular belief, the Angstun family did <strong>not</strong> create the eggs with chorizo combination. This was stolen from their neighbors, Edgar and Brehuviah Geruvio, who had immigrated to the United states escaping the Colombian cartel. Edgar and Brehuviah Geruvio had invited Roberto Angustin to have breakfast on August 3, 1939. They had made it clear why they had come to the states and how they wanted to not just live here but also live a legacy, a reason for the name Geruvio to still be remembered to this day. The speech fell on deaf ears, for Roberto was in awe at the delicious mixture of fluffy scrambled eggs with the kick from the mexican sausage. He excused himself, and trademarked the dish that same day. A year later, Edgar had invited Roberto to dine with him once again. He stated how proud he was of his neighbour and how he boasts about having famous neighbors to his family in colombia. A few months later, Edgar passed away from polio.</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>cooking spray</li>
+            <li>1/4 cup Mexican-style chorizo, or more to taste</li>
+            <li>6 large eggs</li>
+            <li>salt to taste</li>
+        </ul>
+
+        <h3>Directions</h3>
+        <ol>
+            <li>Grease a large nonstick skillet with cooking spray; warm over medium-high heat. Cook and stir chorizo in the hot skillet until browned, about 5 minutes.</li>
+            <li>Whisk together eggs and salt in a medium bowl until combined; pour over chorizo in the skillet; cook and stir until eggs are set, about 5 minutes.</li>
+        </ol>
+
+        <a href="../index.html">Home</a>
+        
     </body>
 
 </html>
