--- a/recipes/chorizo.html
+++ b/recipes/chorizo.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Scrambled Eggs with Chorizo</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
