--- a/recipes/tilapia.html
+++ b/recipes/tilapia.html
@@ -6,6 +6,7 @@
         
         <meta charset="UTF-8">
         <title>Tilapia Recipe</title>
+        <link rel="stylesheet" href="../css/style.css">
 
     </head>
 
