--- a/recipes/tortellini.html
+++ b/recipes/tortellini.html
@@ -15,7 +15,7 @@
         <h1>Tortellini Lasagna Skillet</h1>
         <img src="../img/tortellini-pic.jpg" height="410" width="410" alt="Tortellini Lasagna Skillet">
 
-        <h2>Description</h2>
+        <h2 class="desc">Description</h2>
         <p>This is one of the final recipes created by Roberto Angustin's great grandfather, Jeziduth Angustin Agorithmo, before he was drafted into the war. Though not the most popular of the Angustin's dishes, it still an incredible delicacy. Though very easy on the taste buds, it is rumored that Agorithmo had stated in his later years that this skillet is one of his greatest regrets.</p>
 
         <h3>Ingredients</h3>
